Fixed overlapping icons, text

--- a/css/style.css
+++ b/css/style.css
@@ -279,9 +279,8 @@ header li {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 300px;
   width: 80%;
-  padding: 90px 30px 0 30px;
+  padding: 0 30px;
 }
 
 .component {
@@ -425,7 +424,6 @@ header li {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: rgb(179, 177, 177);
-  padding-top: 80px;
 }
 
 .contact h3 {
@@ -444,7 +442,6 @@ header li {
   background: darkgrey;
   padding-top: 20px;
   border-radius: 5px;
-  margin-bottom: 40px;
 }
 
 .wrap p {
@@ -500,7 +497,6 @@ input[type="submit"] {
   justify-content: space-evenly;
   width: 50%;
   height: 100%;
-  padding-top: 50px;
 }
 
 .findme a {
